fixtures/runtime/valid/objects/property-read-write.php
<?php
class Slot {
    public $value;
}

$slot = new Slot();
$slot->value = 3;
echo $slot->value, "\n";
