fixtures/runtime/invalid/objects/private-property.php
<?php
class PrivateSlot {
    private $value;
}

$slot = new PrivateSlot();
